[package]
name = "hibike_packet"
version = "0.3.0"
authors = ["baby-bell <baby-bell@users.noreply.github.com>"]

[lib]
name = "hibike_packet"
crate-type = ["cdylib"]

[dependencies]
cpython = { git = "https://github.com/dgrunwald/rust-cpython.git", rev = "78df48952f279dd5937c9b5b945e1c37d0b107db" }
rand = "0.4"
memchr = "2"
proptest = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
lazy_static = "1"
byteorder = "1"

[profile.release]
panic = "abort"
